--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alexandre Delafosse | Home Page</title>
-    <meta name="description" content="Welcome to my website that showcases some of my digital creations.">
+    <title>Alexandre Delafosse - Independent Web and Digital Developer</title>
+    <meta name="description"
+        content="Freelance Web and Digital Developer crafting innovative online experiences on the web and social media.">
+    <link rel="stylesheet" href="assets/css/global.css">
 </head>
 
 <body>
-    <h1>Welcome</h1>
-    <h2>Alexandre Delafosse</h2>
+    <h1>Hi, I'm Alexandre Delafosse</h1> 
+    <h2>Web / UI Designer</h2>
+    <p>I created this website to showcase some of my recent web design work.</p>  
 
     <h3>Sample Web Pages</h3>
 
