--- a/portfolio/fashion/index.html
+++ b/portfolio/fashion/index.html
@@ -20,60 +20,122 @@
         </div>
 
         <div class="hero-bg-media">
-            <video loop="" playsinline="" muted="" autoplay=""
-                poster="https://munnelly.com/lunadoge/assets/videos/hero-still.jpg" class="background-video"
-                disablepictureinpicture="" preload="auto">
-                <link rel="preload" href="assets/videos/hero-still.jpg" as="image"> 
-                <source src="https://munnelly.com/lunadoge/assets/videos/hero-video.mp4" type="video/mp4">
+            <video loop="" playsinline="" muted="" autoplay="" poster="assets/videos/hero-still.jpg"
+                class="background-video" disablepictureinpicture="" preload="auto">
+                <source src="assets/videos/hero-video.mp4" type="video/mp4">
             </video>
+            <link rel="preload" href="assets/videos/hero-still.jpg" as="image">
+
+            <source src="https://munnelly.com/lunadoge/assets/videos/hero-video.mp4" type="video/mp4">
+
+
         </div>
 
         <div class="bg-overlay"></div>
 
     </header>
 
+    <main>
+
+        <section class="theme-one text-center">
+
+            <h2> Only the best for you</h2>
+            <p class="standfirst">Welcome to Europe's number one fashion retailer. No one rivals our collection of <a
+                    href="#hats">hats</a>,
+                <a href="#scarves">scarves</a>, <a href="#t'shirts">t-shirts</a>, and
+                <a href="#footwear">footwear</a>. And we place <a href="#satisfaction">customer satisfaction</a> at the
+                heart of all we do.</p>
+
+        </section>
+
+        <section class="theme-two" id="hats">
+
+            <h2>Hats</h2>
+            <p>Shop our massive collection of fashion headwear, hats and caps. We are here to help you accessorise for
+                every
+                occasion. Add your logo or design to create your custom headwear.</p>
+            <figure>
+                <img src="https://picsum.photos/800/480" alt="Placeholder image">
+            </figure>
+
+            <p> Embroidered caps are a popular choice for uniforms, workwear or fashion and are an excellent way to
+                develop a
+                distinctive look for your brand. Personalised caps and hats are also a great way to enhance your
+                visibility at
+                an event.</p>
+            <div class="container-btn"><a href="#" class="btn btn-primary btn-rounded"><i
+                        class="fas fa-shopping-cart"></i><span>Order now</span></a></div>
+
+
+        </section>
+
+        <section class="theme-three" id="scarves">
+
+            <h2>Scarves</h2>
+            <p> Discover our beautiful range of scarves for all occasions in a wide variety of designs. Our carefully
+                curated
+                selection includes merino wool, cashmere blend, linen, and silk scarves.</p>
+
+            <figure>
+                <img src="https://picsum.photos/800/480" alt="Placeholder image">
+            </figure>
+
+            Whether you are looking for a printed scarf, a silk scarf or a knitted wrap for keeping warm on those cold
+            winter nights, you will be sure to find something you love in our collection.</p>
+            <div class="container-btn"><a href="#" class="btn btn-primary btn-rounded"><i
+                        class="fas fa-shopping-cart"></i><span>Order now</span></a></div>
+
+        </section>
+
+
+        <section class="theme-two">
+
+            <h2>T-shirts</h2>
+            <p> Be unique. Check out our vast collection of t-shirts ethically sourced from independent artists from
+                around the
+                globe. We offer the highest t-shirts on the Internet.</p>
+
+            <figure>
+                <img src="https://picsum.photos/800/480" alt="Placeholder image">
+            </figure>
+
+            <p> Our order fulfilment team is obsessed with customer service. We have thousands of original designs
+                across dozens
+                of different product types – you are guaranteed to find something you love!</p>
+            <div class="container-btn"><a href="#" class="btn btn-primary btn-rounded"><i
+                        class="fas fa-shopping-cart"></i><span>Order now</span></a></div>
+
+
+        </section>
+
+
+        <section class="theme-three" id="footwear">
+
+            <h2>Footwear</h2>
+            <p> Shop our fabulous selection of women’s footwear right here. Our range includes all the latest trends and
+                brands
+                in shoes, boots, heels, wedges, trainers, sandals, and more. We have them all. Refresh your shoe closet
+                with a
+                pair from our online shoe store.</p>
+
+            <figure>
+                <img src="https://picsum.photos/800/480" alt="Placeholder image">
+            </figure>
+
+            Whether you are after a pair of sleek sneakers, designer booties, or comfy sandals, our extensive collection
+            of
+            top brands will have you strutting with confidence!</p>
+            <div class="container-btn"><a href="#" class="btn btn-primary btn-rounded"><i
+                        class="fas fa-shopping-cart"></i><span>Order now</span></a></div>
+
+        </section>
+
+
+
+
+    </main>
+
     <p>
-
-        
-
-        Only the best for you
-
-        Welcome to Europe's number one fashion retailer. No one rivals our collection of hats, scarves, t-shirts, and
-        footwear. And we place customer satisfaction at the heart of all we do.
-
-        Hats
-
-        Shop our massive collection of fashion headwear, hats and caps. We are here to help you accessorise for every
-        occasion. Add your logo or design to create your custom headwear.
-
-        Embroidered caps are a popular choice for uniforms, workwear or fashion and are an excellent way to develop a
-        distinctive look for your brand. Personalised caps and hats are also a great way to enhance your visibility at
-        an event.
-
-        Scarves
-
-        Discover our beautiful range of scarves for all occasions in a wide variety of designs. Our carefully curated
-        selection includes merino wool, cashmere blend, linen, and silk scarves.
-
-        Whether you are looking for a printed scarf, a silk scarf or a knitted wrap for keeping warm on those cold
-        winter nights, you will be sure to find something you love in our collection. T-shirts
-
-        T-shirts
-
-        Be unique. Check out our vast collection of t-shirts ethically sourced from independent artists from around the
-        globe. We offer the highest t-shirts on the Internet.
-
-        Our order fulfilment team is obsessed with customer service. We have thousands of original designs across dozens
-        of different product types – you are guaranteed to find something you love!
-
-        Footwear
-
-        Shop our fabulous selection of women’s footwear right here. Our range includes all the latest trends and brands
-        in shoes, boots, heels, wedges, trainers, sandals, and more. We have them all. Refresh your shoe closet with a
-        pair from our online shoe store.
-
-        Whether you are after a pair of sleek sneakers, designer booties, or comfy sandals, our extensive collection of
-        top brands will have you strutting with confidence!
 
         Happy Customers
 
