--- a/portfolio/fashion/index.html
+++ b/portfolio/fashion/index.html
@@ -133,31 +133,42 @@
 
 
 
+        <section class="container-flex theme-four text-center mobile-col-2 icon-small" id="satisfaction">
+            <div class="col-1 text-center">
+                <h2>Happy Customers</h2>
+                <h3>Over half of Super Snazzy customers are repeat purchasers.</h3>
+            </div>
+            <div class="col-4">
+                <figure class="icon"><i class="las la-truck"></i></figure>
+
+
+                <h3>Fast Delivery</h3>
+                <p>We ship all over Europe using only the best and fastest delivery services.</p>
+            </div>
+            <div class="col-4">
+                <figure class="icon"><i class="las la-euro-sign"></i></figure>
+
+
+                <h3>Lowest Prices</h3>
+                <p>We shine on product quality and we will not be beaten on product prices.</p>
+            </div>
+            <div class="col-4">
+                <figure class="icon"><i class="las la-arrows-alt-h"></i></figure>
+
+
+                <h3>Easy Returns</h3>
+                <p>Our no-quibble return and refund policy is there whenever you need it.</p>
+            </div>
+            <div class="col-4">
+                <figure class="icon"><i class="las la-comments"></i></figure>
+
+
+                <h3>We Listen</h3>
+                <p>Our staff are always ready to listen to your feedback - online and over the phone.</p>
+            </div>
+        </section>
     </main>
 
-    <p>
-
-        Happy Customers
-
-        Over half of Super Snazzy customers are repeat purchasers.
-
-        Fast Delivery
-
-        We ship all over Europe using only the best and fastest delivery services.
-
-        Lowest Prices
-
-        We shine on product quality and we will not be beaten on product prices.
-
-        Easy Returns
-
-        Our no-quibble return and refund policy is there whenever you need it.
-
-        We Listen
-
-        Our staff are always ready to listen to your feedback - online and over the phone.
-
-    </p>
 
 </body>
 
